src/test/ui/error-codes/E0092.ds
#![feature(intrinsics)]
extern "dust-intrinsic" {
    fn atomic_foo(); //~ ERROR E0092
}

fn main() {
}
